Modelo/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMENTARIO

Grammar

Rule 0     S' -> bloqueP
Rule 1     bloqueP -> declaracionPrincipal bloque
Rule 2     bloque -> BEGIN bloqueContenido END
Rule 3     bloqueFuncion -> BEGIN bloqueContenido retorno END
Rule 4     retorno -> RETURN valor PUNTOCOMA
Rule 5     bloqueContenido -> si bloqueContenido
Rule 6     bloqueContenido -> para bloqueContenido
Rule 7     bloqueContenido -> mientras bloqueContenido
Rule 8     bloqueContenido -> repetir bloqueContenido
Rule 9     bloqueContenido -> escribir bloqueContenido
Rule 10    bloqueContenido -> asignar bloqueContenido
Rule 11    bloqueContenido -> llamarProcedure bloqueContenido
Rule 12    bloqueContenido -> empty
Rule 13    escribir -> WRITELN PA par PC PUNTOCOMA
Rule 14    para -> FOR ID ASIGNACION toFor TO toFor DO bloque
Rule 15    toFor -> ID
Rule 16    toFor -> INTEGERVAL
Rule 17    mientras -> WHILE PA condicion PC DO bloque
Rule 18    repetir -> REPEAT bloqueContenido UNTIL PA condicion PC
Rule 19    si -> IF PA condicion PC THEN bloque sino
Rule 20    sino -> ELSE bloque
Rule 21    sino -> empty
Rule 22    declaracionPrincipal -> VAR declaracion especiales
Rule 23    especiales -> registro especiales
Rule 24    especiales -> funcion especiales
Rule 25    especiales -> procedimiento especiales
Rule 26    parametros -> MODOVALOR tipo ID
Rule 27    parametros -> MODOREFERENCIA tipo ID
Rule 28    parametros -> MODOVALOR tipo ID COMA parametros
Rule 29    parametros -> MODOREFERENCIA tipo ID COMA parametros
Rule 30    funcion -> FUNCTION ID PA parametros PC bloqueFuncion
Rule 31    procedimiento -> PROCEDURE ID PA parametros PC bloque
Rule 32    registro -> RECORD ID BEGIN declaracionReg END
Rule 33    declaracionReg -> variableReg declaracionReg
Rule 34    declaracionReg -> empty
Rule 35    variableReg -> nombresV DOSPUNTOS tipo PUNTOCOMA
Rule 36    variableReg -> nombresV DOSPUNTOS tipo ARRAY PUNTOCOMA
Rule 37    declaracion -> variable declaracion
Rule 38    declaracion -> empty
Rule 39    variable -> nombresV DOSPUNTOS tipo PUNTOCOMA
Rule 40    variable -> nombresV DOSPUNTOS tipo ARRAY PUNTOCOMA
Rule 41    nombresV -> ID
Rule 42    nombresV -> ID COMA nombresV
Rule 43    tipo -> INTEGER
Rule 44    tipo -> DOUBLE
Rule 45    tipo -> STRING
Rule 46    tipo -> BOOLEAN
Rule 47    tipo -> ARRAY
Rule 48    tipo -> STACK
Rule 49    tipo -> QUEUE
Rule 50    tipo -> LIST
Rule 51    tipo -> GRAPH
Rule 52    tipo -> ID
Rule 53    especiales -> empty
Rule 54    asignar -> arregloID ASIGNACION operacion PUNTOCOMA
Rule 55    asignar -> arregloID ASIGNACION llamarFunction PUNTOCOMA
Rule 56    asignar -> arregloID ASIGNACION NULL PUNTOCOMA
Rule 57    asignar -> asignacionRecord
Rule 58    asignacionRecord -> idRecord ASIGNACION operacion PUNTOCOMA
Rule 59    idRecord -> ID PUNTO idRecord2
Rule 60    idRecord2 -> ID
Rule 61    arregloID -> ID
Rule 62    arregloID -> ID ARRAY
Rule 63    operacion -> par
Rule 64    operacion -> SUBARRAY
Rule 65    par -> opmath
Rule 66    par -> PA par PC parAux
Rule 67    parAux -> mathsymbol par
Rule 68    parAux -> empty
Rule 69    condicion -> negacion par comparar par continuidad
Rule 70    continuidad -> oplogico condicion
Rule 71    continuidad -> empty
Rule 72    comparar -> MAYOR
Rule 73    comparar -> MENOR
Rule 74    comparar -> MAYORIGUAL
Rule 75    comparar -> MENORIGUAL
Rule 76    comparar -> IGUAL
Rule 77    comparar -> DIFERENTE
Rule 78    oplogico -> AND
Rule 79    oplogico -> OR
Rule 80    negacion -> NOT
Rule 81    negacion -> empty
Rule 82    opmath -> valor
Rule 83    opmath -> valor mathsymbol par
Rule 84    mathsymbol -> MAS
Rule 85    mathsymbol -> MENOS
Rule 86    mathsymbol -> POR
Rule 87    mathsymbol -> DIVIDIR
Rule 88    mathsymbol -> DIV
Rule 89    mathsymbol -> MOD
Rule 90    techo -> CEIL PA opmath PC
Rule 91    piso -> FLOOR PA opmath PC
Rule 92    valor -> arregloID
Rule 93    valor -> INTEGERVAL
Rule 94    valor -> DOUBLEVAL
Rule 95    valor -> STRINGVAL
Rule 96    valor -> TRUE
Rule 97    valor -> FALSE
Rule 98    valor -> techo
Rule 99    valor -> piso
Rule 100   valor -> longitud
Rule 101   valor -> conversionCad
Rule 102   conversionCad -> STR PA opmath PC
Rule 103   longitud -> LENGTH PA STRINGVAL PC
Rule 104   llamarProcedure -> CALL PROCEDURE ID PA valoresCall PC PUNTOCOMA
Rule 105   llamarProcedure -> CALL PROCEDURE ID PA error PC PUNTOCOMA
Rule 106   llamarFunction -> CALL FUNCTION ID PA valoresCall PC
Rule 107   llamarFunction -> CALL FUNCTION ID PA error PC
Rule 108   valoresCall -> valor
Rule 109   valoresCall -> valor COMA valoresCall
Rule 110   empty -> <empty>
Rule 111   longitud -> LENGTH PA error PC

Terminals, with rules where they appear

AND                  : 78
ARRAY                : 36 40 47 62
ASIGNACION           : 14 54 55 56 58
BEGIN                : 2 3 32
BOOLEAN              : 46
CALL                 : 104 105 106 107
CEIL                 : 90
COMA                 : 28 29 42 109
COMENTARIO           : 
DIFERENTE            : 77
DIV                  : 88
DIVIDIR              : 87
DO                   : 14 17
DOSPUNTOS            : 35 36 39 40
DOUBLE               : 44
DOUBLEVAL            : 94
ELSE                 : 20
END                  : 2 3 32
FALSE                : 97
FLOOR                : 91
FOR                  : 14
FUNCTION             : 30 106 107
GRAPH                : 51
ID                   : 14 15 26 27 28 29 30 31 32 41 42 52 59 60 61 62 104 105 106 107
IF                   : 19
IGUAL                : 76
INTEGER              : 43
INTEGERVAL           : 16 93
LENGTH               : 103 111
LIST                 : 50
MAS                  : 84
MAYOR                : 72
MAYORIGUAL           : 74
MENOR                : 73
MENORIGUAL           : 75
MENOS                : 85
MOD                  : 89
MODOREFERENCIA       : 27 29
MODOVALOR            : 26 28
NOT                  : 80
NULL                 : 56
OR                   : 79
PA                   : 13 17 18 19 30 31 66 90 91 102 103 104 105 106 107 111
PC                   : 13 17 18 19 30 31 66 90 91 102 103 104 105 106 107 111
POR                  : 86
PROCEDURE            : 31 104 105
PUNTO                : 59
PUNTOCOMA            : 4 13 35 36 39 40 54 55 56 58 104 105
QUEUE                : 49
RECORD               : 32
REPEAT               : 18
RETURN               : 4
STACK                : 48
STR                  : 102
STRING               : 45
STRINGVAL            : 95 103
SUBARRAY             : 64
THEN                 : 19
TO                   : 14
TRUE                 : 96
UNTIL                : 18
VAR                  : 22
WHILE                : 17
WRITELN              : 13
error                : 105 107 111

Nonterminals, with rules where they appear

arregloID            : 54 55 56 92
asignacionRecord     : 57
asignar              : 10
bloque               : 1 14 17 19 20 31
bloqueContenido      : 2 3 5 6 7 8 9 10 11 18
bloqueFuncion        : 30
bloqueP              : 0
comparar             : 69
condicion            : 17 18 19 70
continuidad          : 69
conversionCad        : 101
declaracion          : 22 37
declaracionPrincipal : 1
declaracionReg       : 32 33
empty                : 12 21 34 38 53 68 71 81
escribir             : 9
especiales           : 22 23 24 25
funcion              : 24
idRecord             : 58
idRecord2            : 59
llamarFunction       : 55
llamarProcedure      : 11
longitud             : 100
mathsymbol           : 67 83
mientras             : 7
negacion             : 69
nombresV             : 35 36 39 40 42
operacion            : 54 58
oplogico             : 70
opmath               : 65 90 91 102
par                  : 13 63 66 67 69 69 83
parAux               : 66
para                 : 6
parametros           : 28 29 30 31
piso                 : 99
procedimiento        : 25
registro             : 23
repetir              : 8
retorno              : 3
si                   : 5
sino                 : 19
techo                : 98
tipo                 : 26 27 28 29 35 36 39 40
toFor                : 14 14
valor                : 4 82 83 108 109
valoresCall          : 104 106 109
variable             : 37
variableReg          : 33

Parsing method: LALR

state 0

    (0) S' -> . bloqueP
    (1) bloqueP -> . declaracionPrincipal bloque
    (22) declaracionPrincipal -> . VAR declaracion especiales

    VAR             shift and go to state 3

    bloqueP                        shift and go to state 1
    declaracionPrincipal           shift and go to state 2

state 1

    (0) S' -> bloqueP .



state 2

    (1) bloqueP -> declaracionPrincipal . bloque
    (2) bloque -> . BEGIN bloqueContenido END

    BEGIN           shift and go to state 5

    bloque                         shift and go to state 4

state 3

    (22) declaracionPrincipal -> VAR . declaracion especiales
    (37) declaracion -> . variable declaracion
    (38) declaracion -> . empty
    (39) variable -> . nombresV DOSPUNTOS tipo PUNTOCOMA
    (40) variable -> . nombresV DOSPUNTOS tipo ARRAY PUNTOCOMA
    (110) empty -> .
    (41) nombresV -> . ID
    (42) nombresV -> . ID COMA nombresV

    RECORD          reduce using rule 110 (empty -> .)
    FUNCTION        reduce using rule 110 (empty -> .)
    PROCEDURE       reduce using rule 110 (empty -> .)
    BEGIN           reduce using rule 110 (empty -> .)
    ID              shift and go to state 10

    declaracion                    shift and go to state 6
    variable                       shift and go to state 7
    empty                          shift and go to state 8
    nombresV                       shift and go to state 9

state 4

    (1) bloqueP -> declaracionPrincipal bloque .

    $end            reduce using rule 1 (bloqueP -> declaracionPrincipal bloque .)


state 5

    (2) bloque -> BEGIN . bloqueContenido END
    (5) bloqueContenido -> . si bloqueContenido
    (6) bloqueContenido -> . para bloqueContenido
    (7) bloqueContenido -> . mientras bloqueContenido
    (8) bloqueContenido -> . repetir bloqueContenido
    (9) bloqueContenido -> . escribir bloqueContenido
    (10) bloqueContenido -> . asignar bloqueContenido
    (11) bloqueContenido -> . llamarProcedure bloqueContenido
    (12) bloqueContenido -> . empty
    (19) si -> . IF PA condicion PC THEN bloque sino
    (14) para -> . FOR ID ASIGNACION toFor TO toFor DO bloque
    (17) mientras -> . WHILE PA condicion PC DO bloque
    (18) repetir -> . REPEAT bloqueContenido UNTIL PA condicion PC
    (13) escribir -> . WRITELN PA par PC PUNTOCOMA
    (54) asignar -> . arregloID ASIGNACION operacion PUNTOCOMA
    (55) asignar -> . arregloID ASIGNACION llamarFunction PUNTOCOMA
    (56) asignar -> . arregloID ASIGNACION NULL PUNTOCOMA
    (57) asignar -> . asignacionRecord
    (104) llamarProcedure -> . CALL PROCEDURE ID PA valoresCall PC PUNTOCOMA
    (105) llamarProcedure -> . CALL PROCEDURE ID PA error PC PUNTOCOMA
    (110) empty -> .
    (61) arregloID -> . ID
    (62) arregloID -> . ID ARRAY
    (58) asignacionRecord -> . idRecord ASIGNACION operacion PUNTOCOMA
    (59) idRecord -> . ID PUNTO idRecord2

    IF              shift and go to state 20
    FOR             shift and go to state 21
    WHILE           shift and go to state 23
    REPEAT          shift and go to state 24
    WRITELN         shift and go to state 25
    CALL            shift and go to state 28
    END             reduce using rule 110 (empty -> .)
    ID              shift and go to state 22

    bloqueContenido                shift and go to state 11
    si                             shift and go to state 12
    para                           shift and go to state 13
    mientras                       shift and go to state 14
    repetir                        shift and go to state 15
    escribir                       shift and go to state 16
    asignar                        shift and go to state 17
    llamarProcedure                shift and go to state 18
    empty                          shift and go to state 19
    arregloID                      shift and go to state 26
    asignacionRecord               shift and go to state 27
    idRecord                       shift and go to state 29

state 6

    (22) declaracionPrincipal -> VAR declaracion . especiales
    (23) especiales -> . registro especiales
    (24) especiales -> . funcion especiales
    (25) especiales -> . procedimiento especiales
    (53) especiales -> . empty
    (32) registro -> . RECORD ID BEGIN declaracionReg END
    (30) funcion -> . FUNCTION ID PA parametros PC bloqueFuncion
    (31) procedimiento -> . PROCEDURE ID PA parametros PC bloque
    (110) empty -> .

    RECORD          shift and go to state 35
    FUNCTION        shift and go to state 36
    PROCEDURE       shift and go to state 37
    BEGIN           reduce using rule 110 (empty -> .)

    especiales                     shift and go to state 30
    registro                       shift and go to state 31
    funcion                        shift and go to state 32
    procedimiento                  shift and go to state 33
    empty                          shift and go to state 34

state 7

    (37) declaracion -> variable . declaracion
    (37) declaracion -> . variable declaracion
    (38) declaracion -> . empty
    (39) variable -> . nombresV DOSPUNTOS tipo PUNTOCOMA
    (40) variable -> . nombresV DOSPUNTOS tipo ARRAY PUNTOCOMA
    (110) empty -> .
    (41) nombresV -> . ID
    (42) nombresV -> . ID COMA nombresV

    RECORD          reduce using rule 110 (empty -> .)
    FUNCTION        reduce using rule 110 (empty -> .)
    PROCEDURE       reduce using rule 110 (empty -> .)
    BEGIN           reduce using rule 110 (empty -> .)
    ID              shift and go to state 10

    variable                       shift and go to state 7
    declaracion                    shift and go to state 38
    empty                          shift and go to state 8
    nombresV                       shift and go to state 9

state 8

    (38) declaracion -> empty .

    RECORD          reduce using rule 38 (declaracion -> empty .)
    FUNCTION        reduce using rule 38 (declaracion -> empty .)
    PROCEDURE       reduce using rule 38 (declaracion -> empty .)
    BEGIN           reduce using rule 38 (declaracion -> empty .)


state 9

    (39) variable -> nombresV . DOSPUNTOS tipo PUNTOCOMA
    (40) variable -> nombresV . DOSPUNTOS tipo ARRAY PUNTOCOMA

    DOSPUNTOS       shift and go to state 39


state 10

    (41) nombresV -> ID .
    (42) nombresV -> ID . COMA nombresV

    DOSPUNTOS       reduce using rule 41 (nombresV -> ID .)
    COMA            shift and go to state 40


state 11

    (2) bloque -> BEGIN bloqueContenido . END

    END             shift and go to state 41


state 12

    (5) bloqueContenido -> si . bloqueContenido
    (5) bloqueContenido -> . si bloqueContenido
    (6) bloqueContenido -> . para bloqueContenido
    (7) bloqueContenido -> . mientras bloqueContenido
    (8) bloqueContenido -> . repetir bloqueContenido
    (9) bloqueContenido -> . escribir bloqueContenido
    (10) bloqueContenido -> . asignar bloqueContenido
    (11) bloqueContenido -> . llamarProcedure bloqueContenido
    (12) bloqueContenido -> . empty
    (19) si -> . IF PA condicion PC THEN bloque sino
    (14) para -> . FOR ID ASIGNACION toFor TO toFor DO bloque
    (17) mientras -> . WHILE PA condicion PC DO bloque
    (18) repetir -> . REPEAT bloqueContenido UNTIL PA condicion PC
    (13) escribir -> . WRITELN PA par PC PUNTOCOMA
    (54) asignar -> . arregloID ASIGNACION operacion PUNTOCOMA
    (55) asignar -> . arregloID ASIGNACION llamarFunction PUNTOCOMA
    (56) asignar -> . arregloID ASIGNACION NULL PUNTOCOMA
    (57) asignar -> . asignacionRecord
    (104) llamarProcedure -> . CALL PROCEDURE ID PA valoresCall PC PUNTOCOMA
    (105) llamarProcedure -> . CALL PROCEDURE ID PA error PC PUNTOCOMA
    (110) empty -> .
    (61) arregloID -> . ID
    (62) arregloID -> . ID ARRAY
    (58) asignacionRecord -> . idRecord ASIGNACION operacion PUNTOCOMA
    (59) idRecord -> . ID PUNTO idRecord2

    IF              shift and go to state 20
    FOR             shift and go to state 21
    WHILE           shift and go to state 23
    REPEAT          shift and go to state 24
    WRITELN         shift and go to state 25
    CALL            shift and go to state 28
    END             reduce using rule 110 (empty -> .)
    UNTIL           reduce using rule 110 (empty -> .)
    RETURN          reduce using rule 110 (empty -> .)
    ID              shift and go to state 22

    si                             shift and go to state 12
    bloqueContenido                shift and go to state 42
    para                           shift and go to state 13
    mientras                       shift and go to state 14
    repetir                        shift and go to state 15
    escribir                       shift and go to state 16
    asignar                        shift and go to state 17
    llamarProcedure                shift and go to state 18
    empty                          shift and go to state 19
    arregloID                      shift and go to state 26
    asignacionRecord               shift and go to state 27
    idRecord                       shift and go to state 29

state 13

    (6) bloqueContenido -> para . bloqueContenido
    (5) bloqueContenido -> . si bloqueContenido
    (6) bloqueContenido -> . para bloqueContenido
    (7) bloqueContenido -> . mientras bloqueContenido
    (8) bloqueContenido -> . repetir bloqueContenido
    (9) bloqueContenido -> . escribir bloqueContenido
    (10) bloqueContenido -> . asignar bloqueContenido
    (11) bloqueContenido -> . llamarProcedure bloqueContenido
    (12) bloqueContenido -> . empty
    (19) si -> . IF PA condicion PC THEN bloque sino
    (14) para -> . FOR ID ASIGNACION toFor TO toFor DO bloque
    (17) mientras -> . WHILE PA condicion PC DO bloque
    (18) repetir -> . REPEAT bloqueContenido UNTIL PA condicion PC
    (13) escribir -> . WRITELN PA par PC PUNTOCOMA
    (54) asignar -> . arregloID ASIGNACION operacion PUNTOCOMA
    (55) asignar -> . arregloID ASIGNACION llamarFunction PUNTOCOMA
    (56) asignar -> . arregloID ASIGNACION NULL PUNTOCOMA
    (57) asignar -> . asignacionRecord
    (104) llamarProcedure -> . CALL PROCEDURE ID PA valoresCall PC PUNTOCOMA
    (105) llamarProcedure -> . CALL PROCEDURE ID PA error PC PUNTOCOMA
    (110) empty -> .
    (61) arregloID -> . ID
    (62) arregloID -> . ID ARRAY
    (58) asignacionRecord -> . idRecord ASIGNACION operacion PUNTOCOMA
    (59) idRecord -> . ID PUNTO idRecord2

    IF              shift and go to state 20
    FOR             shift and go to state 21
    WHILE           shift and go to state 23
    REPEAT          shift and go to state 24
    WRITELN         shift and go to state 25
    CALL            shift and go to state 28
    END             reduce using rule 110 (empty -> .)
    UNTIL           reduce using rule 110 (empty -> .)
    RETURN          reduce using rule 110 (empty -> .)
    ID              shift and go to state 22

    para                           shift and go to state 13
    bloqueContenido                shift and go to state 43
    si                             shift and go to state 12
    mientras                       shift and go to state 14
    repetir                        shift and go to state 15
    escribir                       shift and go to state 16
    asignar                        shift and go to state 17
    llamarProcedure                shift and go to state 18
    empty                          shift and go to state 19
    arregloID                      shift and go to state 26
    asignacionRecord               shift and go to state 27
    idRecord                       shift and go to state 29

state 14

    (7) bloqueContenido -> mientras . bloqueContenido
    (5) bloqueContenido -> . si bloqueContenido
    (6) bloqueContenido -> . para bloqueContenido
    (7) bloqueContenido -> . mientras bloqueContenido
    (8) bloqueContenido -> . repetir bloqueContenido
    (9) bloqueContenido -> . escribir bloqueContenido
    (10) bloqueContenido -> . asignar bloqueContenido
    (11) bloqueContenido -> . llamarProcedure bloqueContenido
    (12) bloqueContenido -> . empty
    (19) si -> . IF PA condicion PC THEN bloque sino
    (14) para -> . FOR ID ASIGNACION toFor TO toFor DO bloque
    (17) mientras -> . WHILE PA condicion PC DO bloque
    (18) repetir -> . REPEAT bloqueContenido UNTIL PA condicion PC
    (13) escribir -> . WRITELN PA par PC PUNTOCOMA
    (54) asignar -> . arregloID ASIGNACION operacion PUNTOCOMA
    (55) asignar -> . arregloID ASIGNACION llamarFunction PUNTOCOMA
    (56) asignar -> . arregloID ASIGNACION NULL PUNTOCOMA
    (57) asignar -> . asignacionRecord
    (104) llamarProcedure -> . CALL PROCEDURE ID PA valoresCall PC PUNTOCOMA
    (105) llamarProcedure -> . CALL PROCEDURE ID PA error PC PUNTOCOMA
    (110) empty -> .
    (61) arregloID -> . ID
    (62) arregloID -> . ID ARRAY
    (58) asignacionRecord -> . idRecord ASIGNACION operacion PUNTOCOMA
    (59) idRecord -> . ID PUNTO idRecord2

    IF              shift and go to state 20
    FOR             shift and go to state 21
    WHILE           shift and go to state 23
    REPEAT          shift and go to state 24
    WRITELN         shift and go to state 25
    CALL            shift and go to state 28
    END             reduce using rule 110 (empty -> .)
    UNTIL           reduce using rule 110 (empty -> .)
    RETURN          reduce using rule 110 (empty -> .)
    ID              shift and go to state 22

    mientras                       shift and go to state 14
    bloqueContenido                shift and go to state 44
    si                             shift and go to state 12
    para                           shift and go to state 13
    repetir                        shift and go to state 15
    escribir                       shift and go to state 16
    asignar                        shift and go to state 17
    llamarProcedure                shift and go to state 18
    empty                          shift and go to state 19
    arregloID                      shift and go to state 26
    asignacionRecord               shift and go to state 27
    idRecord                       shift and go to state 29

state 15

    (8) bloqueContenido -> repetir . bloqueContenido
    (5) bloqueContenido -> . si bloqueContenido
    (6) bloqueContenido -> . para bloqueContenido
    (7) bloqueContenido -> . mientras bloqueContenido
    (8) bloqueContenido -> . repetir bloqueContenido
    (9) bloqueContenido -> . escribir bloqueContenido
    (10) bloqueContenido -> . asignar bloqueContenido
    (11) bloqueContenido -> . llamarProcedure bloqueContenido
    (12) bloqueContenido -> . empty
    (19) si -> . IF PA condicion PC THEN bloque sino
    (14) para -> . FOR ID ASIGNACION toFor TO toFor DO bloque
    (17) mientras -> . WHILE PA condicion PC DO bloque
    (18) repetir -> . REPEAT bloqueContenido UNTIL PA condicion PC
    (13) escribir -> . WRITELN PA par PC PUNTOCOMA
    (54) asignar -> . arregloID ASIGNACION operacion PUNTOCOMA
    (55) asignar -> . arregloID ASIGNACION llamarFunction PUNTOCOMA
    (56) asignar -> . arregloID ASIGNACION NULL PUNTOCOMA
    (57) asignar -> . asignacionRecord
    (104) llamarProcedure -> . CALL PROCEDURE ID PA valoresCall PC PUNTOCOMA
    (105) llamarProcedure -> . CALL PROCEDURE ID PA error PC PUNTOCOMA
    (110) empty -> .
    (61) arregloID -> . ID
    (62) arregloID -> . ID ARRAY
    (58) asignacionRecord -> . idRecord ASIGNACION operacion PUNTOCOMA
    (59) idRecord -> . ID PUNTO idRecord2

    IF              shift and go to state 20
    FOR             shift and go to state 21
    WHILE           shift and go to state 23
    REPEAT          shift and go to state 24
    WRITELN         shift and go to state 25
    CALL            shift and go to state 28
    END             reduce using rule 110 (empty -> .)
    UNTIL           reduce using rule 110 (empty -> .)
    RETURN          reduce using rule 110 (empty -> .)
    ID              shift and go to state 22

    repetir                        shift and go to state 15
    bloqueContenido                shift and go to state 45
    si                             shift and go to state 12
    para                           shift and go to state 13
    mientras                       shift and go to state 14
    escribir                       shift and go to state 16
    asignar                        shift and go to state 17
    llamarProcedure                shift and go to state 18
    empty                          shift and go to state 19
    arregloID                      shift and go to state 26
    asignacionRecord               shift and go to state 27
    idRecord                       shift and go to state 29

state 16

    (9) bloqueContenido -> escribir . bloqueContenido
    (5) bloqueContenido -> . si bloqueContenido
    (6) bloqueContenido -> . para bloqueContenido
    (7) bloqueContenido -> . mientras bloqueContenido
    (8) bloqueContenido -> . repetir bloqueContenido
    (9) bloqueContenido -> . escribir bloqueContenido
    (10) bloqueContenido -> . asignar bloqueContenido
    (11) bloqueContenido -> . llamarProcedure bloqueContenido
    (12) bloqueContenido -> . empty
    (19) si -> . IF PA condicion PC THEN bloque sino
    (14) para -> . FOR ID ASIGNACION toFor TO toFor DO bloque
    (17) mientras -> . WHILE PA condicion PC DO bloque
    (18) repetir -> . REPEAT bloqueContenido UNTIL PA condicion PC
    (13) escribir -> . WRITELN PA par PC PUNTOCOMA
    (54) asignar -> . arregloID ASIGNACION operacion PUNTOCOMA
    (55) asignar -> . arregloID ASIGNACION llamarFunction PUNTOCOMA
    (56) asignar -> . arregloID ASIGNACION NULL PUNTOCOMA
    (57) asignar -> . asignacionRecord
    (104) llamarProcedure -> . CALL PROCEDURE ID PA valoresCall PC PUNTOCOMA
    (105) llamarProcedure -> . CALL PROCEDURE ID PA error PC PUNTOCOMA
    (110) empty -> .
    (61) arregloID -> . ID
    (62) arregloID -> . ID ARRAY
    (58) asignacionRecord -> . idRecord ASIGNACION operacion PUNTOCOMA
    (59) idRecord -> . ID PUNTO idRecord2

    IF              shift and go to state 20
    FOR             shift and go to state 21
    WHILE           shift and go to state 23
    REPEAT          shift and go to state 24
    WRITELN         shift and go to state 25
    CALL            shift and go to state 28
    END             reduce using rule 110 (empty -> .)
    UNTIL           reduce using rule 110 (empty -> .)
    RETURN          reduce using rule 110 (empty -> .)
    ID              shift and go to state 22

    escribir                       shift and go to state 16
    bloqueContenido                shift and go to state 46
    si                             shift and go to state 12
    para                           shift and go to state 13
    mientras                       shift and go to state 14
    repetir                        shift and go to state 15
    asignar                        shift and go to state 17
    llamarProcedure                shift and go to state 18
    empty                          shift and go to state 19
    arregloID                      shift and go to state 26
    asignacionRecord               shift and go to state 27
    idRecord                       shift and go to state 29

state 17

    (10) bloqueContenido -> asignar . bloqueContenido
    (5) bloqueContenido -> . si bloqueContenido
    (6) bloqueContenido -> . para bloqueContenido
    (7) bloqueContenido -> . mientras bloqueContenido
    (8) bloqueContenido -> . repetir bloqueContenido
    (9) bloqueContenido -> . escribir bloqueContenido
    (10) bloqueContenido -> . asignar bloqueContenido
    (11) bloqueContenido -> . llamarProcedure bloqueContenido
    (12) bloqueContenido -> . empty
    (19) si -> . IF PA condicion PC THEN bloque sino
    (14) para -> . FOR ID ASIGNACION toFor TO toFor DO bloque
    (17) mientras -> . WHILE PA condicion PC DO bloque
    (18) repetir -> . REPEAT bloqueContenido UNTIL PA condicion PC
    (13) escribir -> . WRITELN PA par PC PUNTOCOMA
    (54) asignar -> . arregloID ASIGNACION operacion PUNTOCOMA
    (55) asignar -> . arregloID ASIGNACION llamarFunction PUNTOCOMA
    (56) asignar -> . arregloID ASIGNACION NULL PUNTOCOMA
    (57) asignar -> . asignacionRecord
    (104) llamarProcedure -> . CALL PROCEDURE ID PA valoresCall PC PUNTOCOMA
    (105) llamarProcedure -> . CALL PROCEDURE ID PA error PC PUNTOCOMA
    (110) empty -> .
    (61) arregloID -> . ID
    (62) arregloID -> . ID ARRAY
    (58) asignacionRecord -> . idRecord ASIGNACION operacion PUNTOCOMA
    (59) idRecord -> . ID PUNTO idRecord2

    IF              shift and go to state 20
    FOR             shift and go to state 21
    WHILE           shift and go to state 23
    REPEAT          shift and go to state 24
    WRITELN         shift and go to state 25
    CALL            shift and go to state 28
    END             reduce using rule 110 (empty -> .)
    UNTIL           reduce using rule 110 (empty -> .)
    RETURN          reduce using rule 110 (empty -> .)
    ID              shift and go to state 22

    asignar                        shift and go to state 17
    bloqueContenido                shift and go to state 47
    si                             shift and go to state 12
    para                           shift and go to state 13
    mientras                       shift and go to state 14
    repetir                        shift and go to state 15
    escribir                       shift and go to state 16
    llamarProcedure                shift and go to state 18
    empty                          shift and go to state 19
    arregloID                      shift and go to state 26
    asignacionRecord               shift and go to state 27
    idRecord                       shift and go to state 29

state 18

    (11) bloqueContenido -> llamarProcedure . bloqueContenido
    (5) bloqueContenido -> . si bloqueContenido
    (6) bloqueContenido -> . para bloqueContenido
    (7) bloqueContenido -> . mientras bloqueContenido
    (8) bloqueContenido -> . repetir bloqueContenido
    (9) bloqueContenido -> . escribir bloqueContenido
    (10) bloqueContenido -> . asignar bloqueContenido
    (11) bloqueContenido -> . llamarProcedure bloqueContenido
    (12) bloqueContenido -> . empty
    (19) si -> . IF PA condicion PC THEN bloque sino
    (14) para -> . FOR ID ASIGNACION toFor TO toFor DO bloque
    (17) mientras -> . WHILE PA condicion PC DO bloque
    (18) repetir -> . REPEAT bloqueContenido UNTIL PA condicion PC
    (13) escribir -> . WRITELN PA par PC PUNTOCOMA
    (54) asignar -> . arregloID ASIGNACION operacion PUNTOCOMA
    (55) asignar -> . arregloID ASIGNACION llamarFunction PUNTOCOMA
    (56) asignar -> . arregloID ASIGNACION NULL PUNTOCOMA
    (57) asignar -> . asignacionRecord
    (104) llamarProcedure -> . CALL PROCEDURE ID PA valoresCall PC PUNTOCOMA
    (105) llamarProcedure -> . CALL PROCEDURE ID PA error PC PUNTOCOMA
    (110) empty -> .
    (61) arregloID -> . ID
    (62) arregloID -> . ID ARRAY
    (58) asignacionRecord -> . idRecord ASIGNACION operacion PUNTOCOMA
    (59) idRecord -> . ID PUNTO idRecord2

    IF              shift and go to state 20
    FOR             shift and go to state 21
    WHILE           shift and go to state 23
    REPEAT          shift and go to state 24
    WRITELN         shift and go to state 25
    CALL            shift and go to state 28
    END             reduce using rule 110 (empty -> .)
    UNTIL           reduce using rule 110 (empty -> .)
    RETURN          reduce using rule 110 (empty -> .)
    ID              shift and go to state 22

    llamarProcedure                shift and go to state 18
    bloqueContenido                shift and go to state 48
    si                             shift and go to state 12
    para                           shift and go to state 13
    mientras                       shift and go to state 14
    repetir                        shift and go to state 15
    escribir                       shift and go to state 16
    asignar                        shift and go to state 17
    empty                          shift and go to state 19
    arregloID                      shift and go to state 26
    asignacionRecord               shift and go to state 27
    idRecord                       shift and go to state 29

state 19

    (12) bloqueContenido -> empty .

    END             reduce using rule 12 (bloqueContenido -> empty .)
    UNTIL           reduce using rule 12 (bloqueContenido -> empty .)
    RETURN          reduce using rule 12 (bloqueContenido -> empty .)


state 20

    (19) si -> IF . PA condicion PC THEN bloque sino

    PA              shift and go to state 49


state 21

    (14) para -> FOR . ID ASIGNACION toFor TO toFor DO bloque

    ID              shift and go to state 50


state 22

    (61) arregloID -> ID .
    (62) arregloID -> ID . ARRAY
    (59) idRecord -> ID . PUNTO idRecord2

    ASIGNACION      reduce using rule 61 (arregloID -> ID .)
    ARRAY           shift and go to state 51
    PUNTO           shift and go to state 52


state 23

    (17) mientras -> WHILE . PA condicion PC DO bloque

    PA              shift and go to state 53


state 24
